<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/aeroblue">

    <TextView
        android:id="@+id/text1"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/sparkle"
        android:fontFamily="@font/genshinfont"
        android:gravity="center"
        android:text="Wage Calculator"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text2"
        android:layout_width="369dp"
        android:layout_height="57dp"
        android:layout_marginTop="12dp"
        android:background="@color/wisteria"
        android:fontFamily="@font/genshinfont"
        android:gravity="center"
        android:text="@string/results"
        android:textColor="@color/color1"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/text4"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/text4"
        app:layout_constraintTop_toBottomOf="@+id/text4" />

    <TextView
        android:id="@+id/text3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/genshinfont"
        android:text="@string/name"
        android:textSize="23sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="@+id/text1"
        app:layout_constraintHorizontal_bias="0.087"
        app:layout_constraintStart_toStartOf="@+id/text1"
        app:layout_constraintTop_toBottomOf="@+id/text1" />

    <TextView
        android:id="@+id/text4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/genshinfont"
        android:text="@string/type"
        android:textSize="22sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/text3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/text3"
        app:layout_constraintTop_toBottomOf="@+id/text3"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/text5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/genshinfont"
        android:text="@string/totalwage"
        android:textSize="23sp"
        app:layout_constraintBottom_toBottomOf="@+id/totalWageOutput"
        app:layout_constraintEnd_toStartOf="@+id/totalWageOutput"
        app:layout_constraintHorizontal_bias="0.232"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/totalWageOutput"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/text6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/genshinfont"
        android:text="@string/regularwage"
        android:textSize="23sp"
        app:layout_constraintBottom_toBottomOf="@+id/regularWageOutput"
        app:layout_constraintEnd_toStartOf="@+id/regularWageOutput"
        app:layout_constraintHorizontal_bias="0.232"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/regularWageOutput"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/text7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/genshinfont"
        android:text="@string/overtimewage"
        android:textSize="23sp"
        app:layout_constraintBottom_toBottomOf="@+id/overtimeWageOutput"
        app:layout_constraintEnd_toStartOf="@+id/overtimeWageOutput"
        app:layout_constraintHorizontal_bias="0.232"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/overtimeWageOutput"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/text8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/genshinfont"
        android:text="@string/hours"
        android:textSize="23sp"
        app:layout_constraintBottom_toBottomOf="@+id/hoursOutput"
        app:layout_constraintEnd_toStartOf="@+id/hoursOutput"
        app:layout_constraintHorizontal_bias="0.232"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/hoursOutput"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/text9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/genshinfont"
        android:text="@string/overtime"
        android:textSize="23sp"
        app:layout_constraintBottom_toBottomOf="@+id/overtimeOutput"
        app:layout_constraintEnd_toStartOf="@+id/overtimeOutput"
        app:layout_constraintHorizontal_bias="0.232"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/overtimeOutput"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/nameOutput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/outputcustom"
        android:textColor="@color/black"
        android:textSize="23sp"
        app:layout_constraintBottom_toBottomOf="@+id/text3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.033"
        app:layout_constraintStart_toEndOf="@+id/text3"
        app:layout_constraintTop_toTopOf="@+id/text3"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/employeeTypeOutput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/outputcustom"
        android:textColor="@color/black"
        android:textSize="23sp"
        app:layout_constraintBottom_toBottomOf="@+id/text4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.089"
        app:layout_constraintStart_toEndOf="@+id/text4"
        app:layout_constraintTop_toTopOf="@+id/text4"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/totalWageOutput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/outputcustom"
        android:textSize="23sp"
        app:layout_constraintEnd_toEndOf="@+id/text2"
        app:layout_constraintHorizontal_bias="0.815"
        app:layout_constraintStart_toStartOf="@+id/text2"
        app:layout_constraintTop_toBottomOf="@+id/text2" />

    <TextView
        android:id="@+id/regularWageOutput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/outputcustom"
        android:textSize="23sp"
        app:layout_constraintEnd_toEndOf="@+id/totalWageOutput"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/totalWageOutput"
        app:layout_constraintTop_toBottomOf="@+id/totalWageOutput" />

    <TextView
        android:id="@+id/overtimeWageOutput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/outputcustom"
        android:textSize="23sp"
        app:layout_constraintEnd_toEndOf="@+id/regularWageOutput"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/regularWageOutput"
        app:layout_constraintTop_toBottomOf="@+id/regularWageOutput" />

    <TextView
        android:id="@+id/hoursOutput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/outputcustom"
        android:textSize="23sp"
        app:layout_constraintEnd_toEndOf="@+id/overtimeWageOutput"
        app:layout_constraintStart_toStartOf="@+id/overtimeWageOutput"
        app:layout_constraintTop_toBottomOf="@+id/overtimeWageOutput" />

    <TextView
        android:id="@+id/overtimeOutput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/outputcustom"
        android:textSize="23sp"
        app:layout_constraintEnd_toEndOf="@+id/hoursOutput"
        app:layout_constraintStart_toStartOf="@+id/hoursOutput"
        app:layout_constraintTop_toBottomOf="@+id/hoursOutput" />

    <Button
        android:id="@+id/returnBTN"
        android:layout_width="161dp"
        android:layout_height="64dp"
        android:layout_marginTop="28dp"
        android:background="?android:attr/selectableItemBackground"
        android:fontFamily="@font/genshinfont"
        android:gravity="center"
        android:text="@string/returnbutton"
        android:textColor="@color/color1"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.876"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/overtimeOutput"
        app:layout_constraintVertical_bias="0.229" />

</androidx.constraintlayout.widget.ConstraintLayout>